# django_project

./: .gitignore  README.md  main.py  manage.py  pyproject.toml  requirements.txt  vercel.json
Notebooks/: preprocess_train.ipynb
Notebooks/.ipynb_checkpoints/: preprocess_train-checkpoint.ipynb
djangomlproject/: asgi.py  settings.py  urls.py  wsgi.py
mainapp/: urls.py  views.py
src/: preprocessing.py
templates/: main.html
