[project]
name = "djangomlproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.8",
    "ipykernel>=7.1.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "numpy==1.26.4",
    "pandas>=2.3.3",
    "scikit-learn==1.3.2",
]
